<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TermsOfUse">

    <!-- Back Button -->

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/dark_blue" />

    <!--    terms and conditions heading-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/terms_and_conditions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:textStyle="bold" />

        <!--  Terms desceiption  -->

    <TextView
        android:id="@+id/terms_desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_description"
        android:textColor="@color/text_gray"
        android:padding="44dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/terms_back_btn"
            android:layout_width="167dp"
            android:layout_height="53dp"
            android:text="Back"
            android:backgroundTint="@color/text_gray"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/term_agree_btn"
            android:layout_width="167dp"
            android:layout_height="53dp"
            android:text="Agree"
            android:backgroundTint="@color/button_blue"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>